# teste_inicial

./: README.md  conciliador.py  pyproject.toml
gui/: app.py
tecnoloc_reconciliation/: __init__.py  __main__.py  cli.py  loader.py  matcher.py  models.py  preprocess.py  reports.py
tests/: test_import.py
